Fixed spacing for Xbox and Carbon

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -114,7 +114,7 @@ ul.main-menu li a:hover {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 20px;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
 }
 
 .home-cards img {
